feat: latest BidWar development
